partly done third hw

--- a/web-components/src/index.html
+++ b/web-components/src/index.html
@@ -5,7 +5,7 @@
     <title>Create message</title>
 </head>
 <body>
-    <message-form action="/">
-    </message-form>
+    <message-form action="/"></message-form>
+    <dialogsList-form action="/"></dialogsList-form>
 </body>
 </html>
