--- a/web-components/src/index.html
+++ b/web-components/src/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Create message</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
     <div class="wrapper">
